--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lato&family=Staatliches&display=swap" rel="stylesheet">
     
 </head>
 <body>
@@ -25,7 +26,7 @@
             </div>
             <ul>
                 <li><a href="index.html" class="current">Home</a></li>
-                <li><a href="about.html" class="current">About</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
         </div>
     </nav>
