--- a/index.html
+++ b/index.html
@@ -30,6 +30,23 @@
             </ul>
         </div>
     </nav>
-    
+
+
+    <!-- Showcas-->
+    <header id="showcase">
+
+        <div class="container">
+            <div class="showcase-container">
+                <div class="showcase-content">
+                    <div class="category category-sports">Sports</div>
+                    <h1>Some sports article</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati repudiandae laboriosam dolorem officia consequuntur temporibus, quo nobis itaque reiciendis impedit!</p>
+                    <a href="article.html" class="btn btn-primary">Read more</a>
+                </div>
+            </div>
+
+        </div>
+
+    </header>
 </body>
 </html>
