Added styling for the buttons and the showcase area

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="showcase-content">
                     <div class="category category-sports">Sports</div>
                     <h1>Some sports article</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati repudiandae laboriosam dolorem officia consequuntur temporibus, quo nobis itaque reiciendis impedit!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati repudiandae laboriosam dolorem officia consequuntur temporibus, quo nobis itaque reiciendis impedit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam esse quod vero neque ullam eum recusandae nemo id vitae soluta laborum quas inventore placeat, illum ipsa tenetur magnam, corrupti, nostrum quae quam provident. Earum quas dolor harum, consequuntur sint deleniti.</p>
                     <a href="article.html" class="btn btn-primary">Read more</a>
                 </div>
             </div>
