--- a/index.html
+++ b/index.html
@@ -48,5 +48,74 @@
         </div>
 
     </header>
+
+    <section id="home-articles" class="py-2">
+        <div class="container">
+        <h2>Editor picks</h2>
+        <div class="articles-container">
+            <article class="card">
+                <img src="img/articles/ent1.jpg" alt="">
+                <div>
+                    <div class="category category-ent">Entertainment</div>
+                    <h3>
+                        <a href="article.html">Lorem ipsum dolor sit amet.</a>
+                    </h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum repudiandae earum reprehenderit deleniti quam exercitationem odit voluptas! Quibusdam, excepturi possimus.</p>
+                </div>
+            </article>
+            <article class="card">
+                    <div class="category category-sports">Sports</div>
+                    <h3>
+                        <a href="article.html">Lorem ipsum dolor sit amet.</a>
+                    </h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum repudiandae earum reprehenderit deleniti quam exercitationem odit voluptas! Quibusdam, excepturi possimus.</p>
+            </article>
+            <article class="card">
+                <img src="img/articles/tech1.jpg" alt="">
+                <div class="category category-technology">Technology</div>
+                <h3>
+                    <a href="article.html">Lorem ipsum dolor sit amet.</a>
+                </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum repudiandae earum reprehenderit deleniti quam exercitationem odit voluptas! Quibusdam, excepturi possimus.</p>
+            </article>
+            <article class="card">
+               
+                <div class="category category-sports">Sports</div>
+                <h3>
+                    <a href="article.html">Lorem ipsum dolor sit amet.</a>
+                </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum repudiandae earum reprehenderit deleniti quam exercitationem odit voluptas! Quibusdam, excepturi possimus.</p>
+                <img src="img/articles/sports1.jpg" alt="">
+            </article>
+            <article class="card">
+                <img src="img/articles/tech2.jpg" alt="">
+                <div class="category category-technology">Technology</div>
+                <h3>
+                    <a href="article.html">Lorem ipsum dolor sit amet.</a>
+                </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum repudiandae earum reprehenderit deleniti quam exercitationem odit voluptas! Quibusdam, excepturi possimus.</p>
+            </article>
+            <article class="card">
+                <div class="category category-sports">Sports</div>
+                <h3>
+                    <a href="article.html">Lorem ipsum dolor sit amet.</a>
+                </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum repudiandae earum reprehenderit deleniti quam exercitationem odit voluptas! Quibusdam, excepturi possimus.</p>
+            </article>
+            <article class="card">
+            
+            <div>
+                <div class="category category-ent">Entertainment</div>
+                <h3>
+                    <a href="article.html">Lorem ipsum dolor sit amet.</a>
+                </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum repudiandae earum reprehenderit deleniti quam exercitationem odit voluptas! Quibusdam, excepturi possimus.</p>
+            </div>
+            <img src="img/articles/ent2.jpg" alt="">
+            </article>
+        </div>  
+    </div>   
+
+    </section>
 </body>
 </html>
