Added styling for the grid and the colors

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum repudiandae earum reprehenderit deleniti quam exercitationem odit voluptas! Quibusdam, excepturi possimus.</p>
                 </div>
             </article>
-            <article class="card">
+            <article class="card bg-dark">
                     <div class="category category-sports">Sports</div>
                     <h3>
                         <a href="article.html">Lorem ipsum dolor sit amet.</a>
