--- a/index.html
+++ b/index.html
@@ -117,5 +117,39 @@
     </div>   
 
     </section>
+
+    <!-- footer-->
+    <footer id="main-footer">
+
+        <div class="container footer-container">
+            <div>
+                <img src="img/logo_light.png" alt="Newsgrid">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti nemo accusantium officiis perspiciatis commodi minima, atque, nam nihil esse, asperiores nobis vero. Saepe molestiae deleniti, magni delectus eius ipsa odio?
+                </p>
+                <h3>Email Newsletter</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                <form>
+                    <input type="email" placeholder="Enter email">
+                    <input type="submit" value="Subscribe" class="btn btn-primary">
+                </form>
+            </div>
+            <div>
+                <h3>Site links</h3>
+                <ul class="list">
+                    <li><a href="#"></a>Help and support</li>
+                    <li><a href="#"></a>Privacy policy</li>
+                    <li><a href="#"></a>About us</li>
+                    <li><a href="#"></a>Contact</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Join our club</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, veniam.</p>
+                <a href="" class="btn btn-secondary">Join now</a>
+            </div>
+            <div><p>Copyright 2022 &copy;</p></div>
+        </div>
+    </footer>
 </body>
 </html>
