Added styling for the footer

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </section>
 
     <!-- footer-->
-    <footer id="main-footer">
+    <footer id="main-footer" class="py-2">
 
         <div class="container footer-container">
             <div>
@@ -127,20 +127,23 @@
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti nemo accusantium officiis perspiciatis commodi minima, atque, nam nihil esse, asperiores nobis vero. Saepe molestiae deleniti, magni delectus eius ipsa odio?
                 </p>
+            </div>
+                <div>
                 <h3>Email Newsletter</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                 <form>
                     <input type="email" placeholder="Enter email">
                     <input type="submit" value="Subscribe" class="btn btn-primary">
                 </form>
-            </div>
+                </div>
+            
             <div>
                 <h3>Site links</h3>
                 <ul class="list">
-                    <li><a href="#"></a>Help and support</li>
-                    <li><a href="#"></a>Privacy policy</li>
-                    <li><a href="#"></a>About us</li>
-                    <li><a href="#"></a>Contact</li>
+                    <li><a href="#">Help and support</a></li>
+                    <li><a href="#">Privacy policy</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </div>
             <div>
