Added styling for the article page

--- a/about.html
+++ b/about.html
@@ -36,10 +36,9 @@
     <div class="container">
         <div class="page-container">
             <article class="card">
-                <h1 class="l-jeading">About our organization</h1>
+                <h1 class="l-heading">Join our club</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium dolore blanditiis quasi nostrum tenetur iste assumenda accusamus vel a quod dolorem ut nulla tempora neque temporibus, facilis laborum quis adipisci quam ipsum porro! Hic enim veritatis perspiciatis magni minima unde corrupti similique, vel expedita. Dolores cupiditate non soluta dicta officia.</p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed id quos assumenda nulla blanditiis voluptatem amet, reprehenderit voluptas tempore accusantium aspernatur modi eaque vero aperiam, laboriosam fugiat voluptates numquam eos quibusdam praesentium possimus corporis animi? Architecto quaerat rem ut assumenda voluptates veritatis. Est ad repellendus blanditiis, beatae voluptates nesciunt in! Aliquid animi quia, vero consequatur, velit debitis id itaque necessitatibus omnis provident repellat ipsam obcaecati totam. Tenetur saepe, adipisci corrupti beatae dolor amet ab nisi veniam cupiditate vel excepturi laudantium tempore quos repellendus possimus atque sint dolorem. Quidem, minus explicabo. Et odit cumque amet ea modi repellendus quidem voluptate omnis.</p>
-
             </article>
 
             <aside class="card bg-primary">
